add: skills page

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <h2>
         ホロライブカード一覧
         <div class="top-nav">
-          <button onclick="location.href='another_page.html'">📂 他のページへ</button>
+          <button onclick="location.href='holoca_skill_page.html'">📂 他のページへ</button>
         </div>
       </h2>
 
