update: json_file and UI

--- a/holoca_skill_page.html
+++ b/holoca_skill_page.html
@@ -288,7 +288,9 @@
           raritySet.add(c.rarity);
           colorSet.add(c.color);
           bloomSet.add(c.bloom);
-          productSet.add(c.product);
+          if (!c.product.includes(",")) {
+            productSet.add(c.product);
+          }
           c.tags.forEach(tag => tagSet.add(tag));
         });
 
