--- a/holoca_skill_page.html
+++ b/holoca_skill_page.html
@@ -132,10 +132,13 @@
       border-color: #666;
     }
 
-    td:nth-child(2), th:nth-child(2) {
-      white-space: normal;
-      min-width: 120px;
-      max-width: 160px;
+    th:nth-child(2) {
+      white-space: nowrap;
+    }
+
+    td:nth-child(2) {
+      min-width: 140px;
+      max-width: 180px;
       word-break: break-word;
     }
 
@@ -152,10 +155,9 @@
       color: #aaa;
     }
 
-    td:nth-child(8), th:nth-child(8),
     td:nth-child(9), th:nth-child(9) {
       word-break: break-word;
-      min-width: 120px;
+      min-width: 240px;
     }
 
     input[type="number"] {
@@ -176,12 +178,6 @@
       cursor: zoom-in;
       background-color: #fff;
       border: 1px solid #ddd;
-    }
-
-    @media screen and (max-width: 600px) {
-      td:nth-child(9), th:nth-child(9) {
-        min-width: 200px;
-      }
     }
   </style>
 </head>
