--- a/holoca_skill_page.html
+++ b/holoca_skill_page.html
@@ -259,11 +259,16 @@
       position:fixed;
       top:0; left:0;
       width:100vw; height:100vh;
-      background:rgba(0,0,0,0.8);
+      background:rgba(0,0,0,0.85);
       text-align:center;
       z-index:1000;
       cursor:zoom-out;">
-      <img src="" style="margin-top:5vh; width:100vw; max-height:90vh; object-fit:contain;">
+      <img src="" style="
+        margin-top:5vh;
+        width:100%;
+        height:auto;
+        max-height:100dvh;
+        object-fit:contain;">
     </div>
 
     <script>
