update: filtersWrapper none

--- a/holoca_skill_page.html
+++ b/holoca_skill_page.html
@@ -98,6 +98,10 @@
       padding: 0 6px;
     }
 
+    #filtersWrapper {
+      display: none;
+    }
+
     .filter-row {
       display: flex;
       flex-wrap: wrap;
@@ -185,7 +189,7 @@
       background-color: #fff;
       border: 1px solid #ddd;
     }
-    
+
     select {
       font-size: 15px;
       padding: 6px;
