--- a/holoca_skill_page.html
+++ b/holoca_skill_page.html
@@ -33,10 +33,11 @@
     }
 
     .container {
-      max-width: none;
-      width: fit-content;
+      width: 100%;
+      max-width: 100vw;
       margin: 0 auto;
       padding: 10px;
+      box-sizing: border-box;
     }
 
     .top-bar {
