--- a/holoca_skill_page.html
+++ b/holoca_skill_page.html
@@ -35,8 +35,25 @@
     .container {
       width: 100%;
       max-width: 100vw;
-      margin: 0 auto;
       padding: 10px;
+      box-sizing: border-box;
+      overflow-x: hidden;
+    }
+
+    .controls {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: flex-end;
+      gap: 8px;
+      margin-bottom: 10px;
+    }
+
+    .controls button,
+    .controls input,
+    .controls select {
+      font-size: 14px;
+      padding: 6px;
+      min-width: 120px;
       box-sizing: border-box;
     }
 
