--- a/holoca_skill_page.html
+++ b/holoca_skill_page.html
@@ -83,7 +83,7 @@
     .controls select {
       font-size: 14px;
       padding: 6px;
-      min-width: 120px;
+      min-width: 100px;
       box-sizing: border-box;
     }
     input[type="text"] {
@@ -119,6 +119,7 @@
       align-items: center;
       gap: 4px;
     }
+
     #filtersWrapper {
       display: none;
     }
@@ -130,7 +131,7 @@
     }
     thead {
       position: sticky;
-      top: 100px;
+      top: 90px;
       background: #f8f8f8;
       z-index: 100;
     }
@@ -141,7 +142,7 @@
     th, td {
       border: 1px solid #ccc;
       padding: 8px;
-      font-size: 14px;
+      font-size: 13px;
       text-align: left;
       vertical-align: top;
       word-break: break-word;
@@ -154,15 +155,16 @@
       white-space: nowrap;
     }
     td:nth-child(2) {
-      min-width: 140px;
-      max-width: 180px;
+      min-width: 120px;
+      max-width: 160px;
+      font-size: 12px;
     }
 
     td.name-cell .meta {
       margin-top: 4px;
       padding: 4px;
       border-top: 1px dashed #ccc;
-      font-size: 13px;
+      font-size: 11px;
       color: #555;
       line-height: 1.4;
     }
@@ -172,7 +174,8 @@
     }
 
     td:nth-child(8), th:nth-child(8) {
-      min-width: 320px;
+      max-width: 300px;
+      font-size: 11px;
     }
 
     input[type="number"] {
@@ -188,26 +191,35 @@
     }
 
     img {
-      width: 60px;
+      width: 50px;
       border-radius: 4px;
       cursor: zoom-in;
       background-color: #fff;
       border: 1px solid #ddd;
     }
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 820px) {
       table {
-        font-size: 12px;
+        font-size: 11px;
       }
+
       td, th {
         padding: 4px;
+        font-size: 11px;
       }
+
+      td:nth-child(2),
+      td:nth-child(8) {
+        max-width: 140px;
+        font-size: 10px;
+      }
+
       img {
-        width: 40px;
+        width: 36px;
       }
-      td:nth-child(2), th:nth-child(2),
-      td:nth-child(8), th:nth-child(8) {
-        max-width: 160px;
+
+      input[type="number"] {
+        width: 32px;
       }
     }
   </style>
