--- a/holoca_skill_page.html
+++ b/holoca_skill_page.html
@@ -17,12 +17,15 @@
       background: #222;
       color: #eee;
     }
+
     .dark table {
       background: #333;
     }
+
     .dark th, .dark td {
       border-color: #666;
     }
+
     .dark input, .dark select, .dark textarea {
       background: #444;
       color: #eee;
@@ -30,11 +33,10 @@
     }
 
     .container {
-      width: 100%;
-      max-width: 100vw;
+      max-width: none;
+      width: fit-content;
+      margin: 0 auto;
       padding: 10px;
-      box-sizing: border-box;
-      overflow-x: hidden;
     }
 
     .top-bar {
@@ -45,6 +47,7 @@
       border-bottom: 1px solid #ccc;
       padding: 10px;
     }
+
     .dark .top-bar {
       background: #222;
       border-color: #444;
@@ -74,25 +77,9 @@
     .controls {
       display: flex;
       flex-wrap: wrap;
-      justify-content: flex-end;
-      gap: 8px;
+      gap: 10px;
       margin-bottom: 10px;
-    }
-    .controls button,
-    .controls input,
-    .controls select {
-      font-size: 14px;
-      padding: 6px;
-      min-width: 100px;
-      box-sizing: border-box;
-    }
-    input[type="text"] {
-      width: 180px;
-    }
-
-    select {
-      font-size: 14px;
-      max-width: 200px;
+      align-items: center;
     }
 
     .filter-group {
@@ -101,51 +88,55 @@
       padding: 10px;
       margin-bottom: 10px;
     }
+
     .dark .filter-group {
       border-color: #666;
     }
+
     .filter-group legend {
       font-weight: bold;
       padding: 0 6px;
-    }
-    .filter-row {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-      margin-top: 6px;
-    }
-    .filter-row label {
-      display: flex;
-      align-items: center;
-      gap: 4px;
     }
 
     #filtersWrapper {
       display: none;
     }
 
+    .filter-row {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      margin-top: 6px;
+    }
+
+    .filter-row label {
+      display: flex;
+      align-items: center;
+      gap: 4px;
+    }
+
     table {
       border-collapse: collapse;
-      table-layout: fixed;
       width: 100%;
+      table-layout: auto;
     }
+
     thead {
       position: sticky;
-      top: 90px;
+      top: 0;
       background: #f8f8f8;
-      z-index: 100;
+      z-index: 50;
     }
     .dark thead {
       background: #333;
-      z-index: 100;
     }
+
     th, td {
       border: 1px solid #ccc;
       padding: 8px;
-      font-size: 13px;
+      font-size: 14px;
       text-align: left;
       vertical-align: top;
-      word-break: break-word;
     }
     .dark th, .dark td {
       border-color: #666;
@@ -154,17 +145,18 @@
     th:nth-child(2) {
       white-space: nowrap;
     }
+
     td:nth-child(2) {
-      min-width: 120px;
-      max-width: 160px;
-      font-size: 12px;
+      min-width: 140px;
+      max-width: 180px;
+      word-break: break-word;
     }
 
     td.name-cell .meta {
       margin-top: 4px;
       padding: 4px;
       border-top: 1px dashed #ccc;
-      font-size: 11px;
+      font-size: 13px;
       color: #555;
       line-height: 1.4;
     }
@@ -174,8 +166,8 @@
     }
 
     td:nth-child(8), th:nth-child(8) {
-      max-width: 300px;
-      font-size: 11px;
+      word-break: break-word;
+      min-width: 320px;
     }
 
     input[type="number"] {
@@ -191,36 +183,23 @@
     }
 
     img {
-      width: 50px;
+      width: 60px;
       border-radius: 4px;
       cursor: zoom-in;
       background-color: #fff;
       border: 1px solid #ddd;
     }
 
-    @media screen and (max-width: 820px) {
-      table {
-        font-size: 11px;
-      }
+    select {
+      font-size: 15px;
+      padding: 6px;
+      max-width: 240px;
+    }
 
-      td, th {
-        padding: 4px;
-        font-size: 11px;
-      }
-
-      td:nth-child(2),
-      td:nth-child(8) {
-        max-width: 140px;
-        font-size: 10px;
-      }
-
-      img {
-        width: 36px;
-      }
-
-      input[type="number"] {
-        width: 32px;
-      }
+    input[type="text"] {
+      font-size: 15px;
+      padding: 6px;
+      width: 240px;
     }
   </style>
 </head>
