--- a/holoca_skill_page.html
+++ b/holoca_skill_page.html
@@ -406,39 +406,41 @@
   };
 
   function renderSkills(skills) {
-  return skills.map(skill => {
-    const iconHTML = (skill.icons?.main ?? [])
-      .map(icon => {
-        const src = iconImageMap[icon.toLowerCase()];
-        return src ? `<img src="${src}" alt="${icon}" style="height:20px; vertical-align:middle;" />` : icon;
-      })
-      .join(" ");
+    return skills.map(skill => {
+      const iconHTML = (skill.icons?.main ?? [])
+        .map(icon => {
+          const src = iconImageMap[icon.toLowerCase()];
+          return src
+            ? `<img src="${src}" alt="${icon}" class="skill-icon" style="height:20px; max-width:24px; object-fit:contain; background:transparent; vertical-align:middle;" />`
+            : icon;
+        })
+        .join(" ");
 
-    const tokkouText = (skill.icons?.tokkou ?? []).length > 0
-      ? `特攻：${skill.icons.tokkou.join("・")}`
-      : "";
-
-    if (skill.text) {
-      return `<b>【${skill.type}】</b><br>${iconHTML}<br>${skill.text}`;
-    } else if (skill.type === "キーワード") {
-      const subtype = skill.subtype ? `<b>【${skill.subtype}】</b>` : "";
-      const name = skill.name ?? "";
-      const desc = skill.description ?? "";
-      return `${subtype}<br>${iconHTML}<br>${name}<br>${desc}`;
-    } else {
-      const typePart = `<b>【${skill.type}】</b>`;
-      const namePart = skill.name ? `[${skill.name}]` : "";
-      const dmg = skill.dmg ? `（${skill.dmg}）` : "";
-      const subtype = skill.subtype ? `<br>${skill.subtype}` : "";
-      const extraIcons = tokkouText ? `｜${tokkouText}` : "";
-      const iconsBlock = iconHTML || tokkouText
-        ? `<br>${iconHTML}${extraIcons}`
+      const tokkouText = (skill.icons?.tokkou ?? []).length > 0
+        ? `特攻：${skill.icons.tokkou.join("・")}`
         : "";
-      const desc = skill.description ?? "";
-      return `${typePart}${namePart}${dmg}${subtype}${iconsBlock}<br>${desc}`;
-    }
-  }).join("<br><br>");
-}
+
+      if (skill.text) {
+        return `<b>【${skill.type}】</b><br>${iconHTML}<br>${skill.text}`;
+      } else if (skill.type === "キーワード") {
+        const subtype = skill.subtype ? `<b>【${skill.subtype}】</b>` : "";
+        const name = skill.name ?? "";
+        const desc = skill.description ?? "";
+        return `${subtype}<br>${iconHTML}<br>${name}<br>${desc}`;
+      } else {
+        const typePart = `<b>【${skill.type}】</b>`;
+        const namePart = skill.name ? `[${skill.name}]` : "";
+        const dmg = skill.dmg ? `（${skill.dmg}）` : "";
+        const subtype = skill.subtype ? `<br>${skill.subtype}` : "";
+        const extraIcons = tokkouText ? `｜${tokkouText}` : "";
+        const iconsBlock = iconHTML || tokkouText
+          ? `<br>${iconHTML}${extraIcons}`
+          : "";
+        const desc = skill.description ?? "";
+        return `${typePart}${namePart}${dmg}${subtype}${iconsBlock}<br>${desc}`;
+      }
+    }).join("<br><br>");
+  }
 
   function renderTable() {
     const keyword = document.getElementById("keywordSearch").value.toLowerCase();
