fix: img.skill-icon border del

--- a/holoca_skill_page.html
+++ b/holoca_skill_page.html
@@ -201,6 +201,12 @@
       padding: 6px;
       width: 240px;
     }
+
+    img.skill-icon {
+      border: none;
+      outline: none;
+      background: transparent;
+    }
   </style>
 </head>
 <body>
